<resources>
    <string name="app_name">RetroSnake</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="top_score">Top Score</string>
    <string name="your_Score">Your Score</string>
    <string name="red">Red Snake</string>
    <string name="blue">blue Snake</string>
    <string name="yellow">yellow Snake</string>
    <string name="green">Green Snake</string>
    <string name="pink">Pink Snake</string>
    <string name="setting">Info</string>
    <string name="back">Back</string>
    <string name="play">Play</string>
    <string name="info">Your snake can anticipate your turn, prepare it and it will turn when you up the finger !</string>

    <string name="About">About</string>
    <string name="AboutText">RetroSnake , application developed by W4pity , currently in third year of Computer Engineering . Find other android applications:\n-RetroPacman\n-GPS-Tracer\n\nw4pity@gmail.com</string>

</resources>
