<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="30dp"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"

        android:layout_gravity="center_horizontal"
        style="@android:style/DeviceDefault.Light.ButtonBar"
        android:id="@+id/button" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"

        android:layout_gravity="center_horizontal"
        style="@android:style/DeviceDefault.Light.ButtonBar"
        android:id="@+id/button2" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow"

        android:layout_gravity="center_horizontal"
        style="@android:style/DeviceDefault.Light.ButtonBar"
        android:id="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:id="@+id/button11"
        style="@android:style/DeviceDefault.Light.ButtonBar"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pink"
        style="@android:style/DeviceDefault.Light.ButtonBar"
        android:id="@+id/button12"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5mm"
        android:layout_gravity="center_horizontal"
        style="@android:style/DeviceDefault.Light.ButtonBar"
        android:text="@string/setting"
        android:id="@+id/button7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/back"

        android:layout_gravity="center_horizontal"
        style="@android:style/DeviceDefault.Light.ButtonBar"
        android:id="@+id/button8" />


</LinearLayout>