<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="200dp"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info"
        android:textAlignment="center"
        android:padding="5mm"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5mm"
        android:text="@string/back"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        style="@android:style/DeviceDefault.ButtonBar" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:id="@+id/button9"
        android:layout_gravity="center_horizontal"
        style="@android:style/DeviceDefault.ButtonBar" />
</LinearLayout>